--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".MainActivity">
+
+        <activity android:name=".Splash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".Details" />
-        <activity android:name=".Questions" />
-        <activity android:name=".Splash"></activity>
+
+        <activity android:name=".MainActivity"/>
+        <activity android:name=".Details" android:parentActivityName=".MainActivity"/>
+        <activity android:name=".Questions" android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
